--- a/css/footer-distributed-with-address-and-phones.css
+++ b/css/footer-distributed-with-address-and-phones.css
@@ -166,3 +166,34 @@
 	}
 
 }
+
+.teamfoot{
+	border: 2px solid red;
+	border-radius: 50%;
+	width: 80px;
+	height: 80px;
+	display: inline-block;
+}
+.teamfeature{
+	width:200px;
+	text-align:center;
+	display:block;
+	float: left;
+
+}
+
+.item{
+	width:200px;
+	text-align:center;
+	display:block;
+	background-color: transparent;
+	border: 1px solid transparent;
+	margin-right: 10px;
+	margin-bottom: 1px;
+	float:left;
+	color: white;
+}
+
+#index-gallery{
+	width:465px;
+}
