--- a/css/footer-distributed-with-address-and-phones.css
+++ b/css/footer-distributed-with-address-and-phones.css
@@ -186,10 +186,8 @@
 	width:200px;
 	text-align:center;
 	display:block;
-	background-color: transparent;
-	border: 1px solid transparent;
-	margin-right: 10px;
 	margin-bottom: 1px;
+	margin-left: -20px;
 	float:left;
 	color: white;
 }
